@@ -32,5 +32,8 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("0.9.5.*")]
-[assembly: AssemblyFileVersion("0.9.5.0")]
+[assembly: AssemblyVersion("0.9.6.*")]
+[assembly: AssemblyFileVersion("0.9.6.0")]
+
+[assembly: AssemblyKeyFile("./deveeldb.snk")]
+[assembly: AssemblyDelaySign(true)]
