@@ -1,6 +1,9 @@
 2009-10-20  Antonello Provenzano  <antonello@deveel.com>
 	* SQLTypes.cs: added the members for interval type (SECOND,
 	MINUTE, HOUR, DAY, MONTH, YEAR and INTERVAL)
+	* TObject.cs: added function SoundsLike to compute
+	SOUNDEX of two strings.
+	* Operator.cs: added operator 'sounds like'.
 	
 2009-10-15  Antonello Provenzano  <antonello@deveel.com>
 	* DatabaseConnection.cs: method GetDbConnection now returns
