@@ -1,4 +1,10 @@
-﻿2009-10-14  Antonello Provenzano  <antonello@deveel.com>
+﻿2009-10-20  Antonello Provenzano  <antonello@deveel.com>
+	* InternalFunctionFactory.cs: added the following function:
+		Mathematical: COS, COSH, ACOS, TAN, TANH, ATAN, 
+		SIN, ASIN
+		String: SOUNDEX
+
+2009-10-14  Antonello Provenzano  <antonello@deveel.com>
 	* FunctionDef.cs: when evaluating with a null query context
 	it will use the FunctionFactory.Internal to look for the
 	function to evaluate.
